--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1988,9 +1988,29 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 
 
+@article{kock1948metallic,
+  title={Metallic delay lenses},
+  author={Kock, Winston E},
+  journal={Bell System Technical Journal},
+  volume={27},
+  number={1},
+  pages={58--82},
+  year={1948},
+  publisher={Wiley Online Library}
+}
 @techreport{merkel1973simulation,
   title={Simulation of a simple Lorentz plasma with a random distribution of inductively loaded dipoles},
   author={Merkel, George},
   year={1973},
   institution={DTIC Document}
+}
+@article{rayleigh1892,
+  title={On the influence of obstacles arranged in rectangular order upon the properties of a medium},
+  author={Rayleigh, Lord},
+  journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  volume={34},
+  number={211},
+  pages={481--502},
+  year={1892},
+  publisher={Taylor \& Francis}
 }
