--- a/fdphd.bib
+++ b/fdphd.bib
@@ -2014,3 +2014,32 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1892},
   publisher={Taylor \& Francis}
 }
+@article{bose1898rotation,
+  title={On the rotation of plane of polarisation of electric waves by a twisted structure},
+  author={Bose, Jagadis Chunder},
+  journal={Proceedings of the Royal Society of London},
+  volume={63},
+  number={389-400},
+  pages={146--152},
+  year={1898},
+  publisher={The Royal Society}
+}
+@article{emerson1997work,
+  title={The work of Jagadis Chandra Bose: 100 years of mm-wave research},
+  author={Emerson, DT},
+  journal={IEEE Transactions on Microwave Theory and Techniques},
+  volume={45},
+  number={12},
+  year={1997}
+}
+@article{eleftheriades2012transforming,		
+  title={Transforming electromagnetics using metamaterials},
+  author={Eleftheriades, George V~and Selvanayagam, Michael},
+  journal={Microwave Magazine, IEEE},
+  volume={13},
+  number={2},
+  pages={26--38},
+  year={2012},
+  publisher={IEEE},
+  url={http://anlage.umd.edu/06167594.pdf},
+}
