--- a/theory.tex
+++ b/theory.tex
@@ -1049,7 +1049,7 @@ Physics, and the fields of photonics in particular, have developed rapidly in th
 The following humble review of the history of metamaterials and photonic crystals is divided into three paradigms that developed independently and in parallel, and were unified only much later. Although each of them, on its own, might have seemed to already have given their fruits, it is their \textit{unification} what renewed the scientific interest and pushed the research further.
 
 \subsection{Historical notes} 
-\paragraph{Photonic band-gap structures} 
+\paragraph{Photonic band-gap structures} %{{{
 In 1887, Lord Rayleigh \cite{johnson2003introduction} noticed the light reflecting in the volume of a transparent crystal composed of thin periodic layers of slightly different optical properties. X-ray scattering on crystals was observed by Max von Laue \cite{friedrich1913interferenzerscheinungen} and explained by W. H. and W. L. Bragg in 1910s \cite{bragg1913reflection}. 
 Both effects are due to a presence of a Bragg band-gap, that is, enabled by the constructive interference of the wave reflected from the layers, either of different optical properties in the Rayleigh's experiment, or composed of the atomic lattice in the X-ray case. 
 
@@ -1062,25 +1062,30 @@ employed for design and manufacturing of the \textit{dielectric mirrors}. Operat
 
 %% TODO PhC slabs \cite{zengerle1987light}
 %% and photonic fibers
+The photonic-crystal fiber, which differs from the common index-guiding fibers by that the light is confined in its core by a photonic band-gap in both lateral directions, was conceived in 1970s. Both types of fibers can be additionally structured in the longitudinal directions, forming a \textit{distributed Bragg reflector}. Such mirrors, acting on the guided wave, can be made extremely narrowband, finding their use in fiber lasers, telecommunication, sensing, etc.
 
-\paragraph{Homogeneous media with uncommon parameters} 
+%}}}
+\paragraph{Homogeneous media with uncommon parameters} %{{{
 Theoretical investigation on electrodynamics of media posessing negative index of refraction, permittivity or permeability can be traced back \cite{agranovich2006spatial} to early discussions of anomalous dispersion near resonances by Lamb or in a 1904 book from Schuster \cite{schuster1904introduction}. Mandelshtam's lectures on optics predicted negative refraction of light in 1940s \cite{mandelstam1971lectures} and were further complemented, among others, in 1950s by Sivukhin's discussion of energy concerns \cite{sivukhin1957energy} and Pafomov's notes about reversed \v{C}erenkov radiation \cite{pafomov1956cerenkov}. It was, however, the Veselago's review of the negative-parameter media \cite{veselago1968} from 1968 that later received significantly wider attention.
 
 Note that the referred theoretical papers all used the electrodynamics of \textit{homogeneous} media, without assuming microscopic periodicity nor any other technical way how such a medium should be obtained. 
 
-
-\paragraph{Homogenized periodic structures} 
-Third independent paradigm was based on arranging sub-wavelength particles to obtain some desired macroscopic behaviour for the light, 
+%}}}
+\paragraph{Homogenized periodic structures} %{{{
+Third independent paradigm was based on arranging sub-wavelength particles to obtain some desired macroscopic behaviour for the light. 
 
 Its roots can be traced to the late 19th century, when the scientific community resolved the question of how the polarizability of individual atoms in a matter affects the macroscopic permittivity. Except for gases, their mutual interaction is not negligible and the answer formulated as the \textit{Lorentz-Lorenz} (or, \textit{Clausius-Mossoti}) formula is less trivial than might be expected. However, thanks to the atomic size being negligible compared to the optical wavelength, all transparent media were successfully approximated as homogeneous. 
 
-Inspired by the Lorentz-Lorenz formula, Lord Rayleigh theoretically elaborated the wave propagation through a rectangular lattice of cylindrical or spherical particles, which dates back to 1892. He also noted an analogy between electromagnetic and acoustic waves \cite[p. 498]{rayleigh1892}. His thoughtful analysis was however still limited to the \textit{quasi-static} case of very low frequencies, negligible to any resonance frequency of the particle.
+Subwavelength wire arrays have been used at least since 1898 as microwave polarisers. From the same time, also the concept of assembling a microwave polarisation rotator from organic or metallic helices is known \cite{bose1898rotation, emerson1997work}.
 
-Similar quasi-periodic structures were employed in the 1940s to construct lightweight lenses for microwave frequencies \cite{kock1948metallic}. Usually the particles consisted of metal waveguides or metal spheres which increased or reduced the wave phase velocity, respectively. These structures operated in the quasi-static regime below any resonance, still allowing one to engineer the broad-band permittivity tensor and accordingly, were denoted as \textit{artificial dielectrics} \cite{brown1955properties}. 
+Inspired by the Lorentz-Lorenz formula, Lord Rayleigh theoretically elaborated the wave propagation through a rectangular lattice of cylindrical or spherical particles, which dates back to 1892. He also noted an analogy between electromagnetic and acoustic waves \cite[p. 498]{rayleigh1892}. His thoughtful analysis was however still focused to the \textit{static limit} of frequencies negligible to any resonance frequency of the particle. 
+
+Similar quasi-periodic structures were employed in the 1940s to construct lightweight lenses for microwave frequencies \cite{kock1948metallic}. Usually the particles consisted of metal waveguides or metal spheres/disks which increased or reduced the wave phase velocity, respectively. These structures still operated in the static limit below any resonance, allowing one to engineer the broad-band permittivity tensor. Accordingly, they were denoted as \textit{artificial dielectrics} \cite{brown1955properties}. 
 
 %% TODO bruggemann and maxwell-garnett theories for composites; note the composites may be somewhat random if in quasi-static case
 
-\paragraph{Unification of periodic structures with uncommon parameters} 
+%}}}
+\paragraph{Unification of periodic structures with uncommon parameters} %{{{
 1950s brought a first step towards achieving negative effective parameters from man-made periodic structures: The geometry of the particles was chosen to put one resonance \textit{below} the frequency of operation. A typical design was an array of short wires that interacted by their electric dipoles with the wave \cite{rotman1962plasma}, and thus acted as Lorentz oscillator with permittivity curve very similar to that in Fig. \ref{fg_oscillator_spectrum}. 
 
 As a result, the structure's effective permittivity, within the approximation of local media, appeared lower than one. Even closer to the resonance, the permittivity was negative, leading to the occasional use of the term \textit{artificial plasma} or \textit{Lorentz plasma} \cite{merkel1973simulation}. The effective refractive index in all such cases was also lower than that of vacuum \cite{brown1953artificial}, but did not go negative as follows from Eq. (\ref{eq_dispeqN}), since the effective permeability was still positive. The unit cell size was kept much smaller than the wavelength, so the task of \textit{homogenization} appeared as settled and apparently did not cause much concerns.
@@ -1091,8 +1096,8 @@ It gained on significant popularity at the late 1990s, probably in connection wi
 This is probably the reason why metamaterials are often associated with negative index refraction; however many of their applications will be shown to use positive index of refraction. 
 Note that the concept of metamaterials is not even limited to electrodynamics; macroscopic mechanical structures were demonstrated to exhibit comparable phenomena for acoustic waves.
 
-
-\paragraph{Unification of structures with uncommon parameters with band-gaps and spatial dispersion} 
+%}}}
+\paragraph{Unification of structures with uncommon parameters with band-gaps and spatial dispersion}			%% TODO%{{{
 The unification between 
 
 mm ??
@@ -1101,12 +1106,11 @@ term first used in
 90's in designing and investigating periodic structures
 
 \cite{shamonina2007metamaterials}
-%% http://www.wave-scattering.com/negative.html
-%% The use of negative refractive medium as a plane-parallel lens (though not yet perfect) has been investigated by R.A. Silin in his article "Possibility of creating plane-parallel lenses", Opt. Spektrosk. 44, 189-191 (1978)
 
 %% Definitions:
 % phc, mm, "electromagnetic materials"
 
+%}}}
 
 \subsection{Applications of photonic crystals} 
 \paragraph{One-dimensional band-gap structures}%{{{
@@ -1135,17 +1139,9 @@ Magnetized PhCs with enhanced magneto-optic interaction for one-dimensional ligh
 
 \subsection{Applications of metamaterials} 
 
-% http://anlage.umd.edu/06167594.pdf
-@article{eleftheriades2012transforming,		
-  title={Transforming electromagnetics using metamaterials},
-  author={Eleftheriades, George V~and Selvanayagam, Michael},
-  journal={Microwave Magazine, IEEE},
-  volume={13},
-  number={2},
-  pages={26--38},
-  year={2012},
-  publisher={IEEE}
-}
+Reviewed in 
+% 
+\cite{eleftheriades2012transforming
 
 
 \paragraph{Negative and unusual values of effective parameters}%{{{
@@ -1182,6 +1178,19 @@ hyperbolic media, analogy with optical fibers, graphene nanostructures...
 %% add about microscope limitation by num-aperture 
 To achieve the desired high resolution
 for imaging beyond the diffraction limit , the medium has to maintain  \todo{+}
+
+%% http://www.wave-scattering.com/negative.html
+%% The use of negative refractive medium as a plane-parallel lens (though not yet perfect) has been investigated by R.A. Silin in his article "Possibility of creating plane-parallel lenses", Opt. Spektrosk. 44, 189-191 (1978)
+
+%Comment  on Negative Refraction  Makes a  Perfect  Lens
+\begin{enumerate}
+\item{The correct amplitude of evanescent waves must be maintained}
+\item{Correct phase of evanescent waves}
+\item{Break-down must be prevented}
+\item{}
+\item{}
+\item{}
+\end{enumerate}
 
 If a metamaterial is used as the medium, this obviously translates into the unit cells being \textit{finer} than the finest details to be imaged. The requirement is in fact much stricter, as also the spatial dispersion has to be negligible for the waves the desired resolution, which could be achieved either with sophisticated engineering of the dispersion, or with massive reduction of the unit cell size, so that all wave vectors are near the center of Brillouin zone. % refer to some Fig. of the PHC BZ
 
