--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,6 +11,9 @@
 %%   of the thesis
 %     --> 
 
+%% NOTES: What was not discussed in the thesis
+%% quasicrystals, chiral media and gyrotropy, structures with nonlinearity or loss,    tunable structures
+
 %%% TODO TODO TODO TODO TODO TODO 
 %%% Hole : Conclusion - what to put here?
 %%% TODO TODO TODO TODO TODO TODO 
